# bsuir-info-theory

./: .gitignore  CMakeLists.txt
.github/workflows/: macos-build-arm64.yml  macos-build-x86.yml  win-build-x86.yml
Build Utils/: platform_build.c  platform_build.h
Extras/MacOS/: AppIcon.icns  Assets.car
Extras/MacOS/icon.icon/: icon.json
Extras/Windows/Task 1/: 7zsd.sfx  config.txt
Extras/Windows/Task 2/: 7zsd.sfx  config.txt
Extras/Windows/Task 3/: 7zsd.sfx  config.txt
GTK Tools/entry_deco/: entry_deco.c  entry_deco.h
GTK Tools/file_selector_deco/: selector_ext_icons.c  selector_ext_icons.h
GTK Tools/independent_wchar/: independent_wchar.c  independent_wchar.h
GTK Tools/string_matrix/: string_matrix.c  string_matrix.h
Task 1/: main.c
Task 1/crypto/: rotation_matrix.h  vigenere_algorithm.h
Task 1/pages/: page_rotation_matrix.c  page_vigenere_algorithm.c  pages.h
Task 1/strings/: ru_strings.h
Task 2/: main.c
Task 2/crypto/: lfsr.h
Task 2/pages/: page_lfsr.c  pages.h
Task 2/strings/: ru_strings.h
Task 3/: main.c
Task 3/crypto/: rabin.h
Task 3/pages/: page_rabin.c  pages.h
Task 3/strings/: ru_strings.h
